--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 </!Doctype> 
     </h4>   math </h4>
 <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC_pt0UDRPtgEHRzj0mAgAjxkvPtDYt4S4yw&s"/> 
+</body>
+</html>
+</h6> hello world </h6>
+<strong>hello </strong>
 
      
