--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 </!Doctype> 
-    </h4>   math </h4>
-<img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC_pt0UDRPtgEHRzj0mAgAjxkvPtDYt4S4yw&s"/> 
+</h6 math  </h6> 
+</img scr>="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC_pt0UDRPtgEHRzj0mAgAjxkvPtDYt4S4yw&s"
 </body>
-</html>
-</h6> hello world </h6>
-<strong>hello </strong>
-
-     
+</html> 
+p {font size: 2.4em; }
