--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-</!Doctype> 
-</h6 math  </h6> 
-</img scr>="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC_pt0UDRPtgEHRzj0mAgAjxkvPtDYt4S4yw&s"
-</body>
-</html> 
-p {font size: 2.4em; }
+<!/Doctype> 
+</h6> hello world </fancy>
+</strong>
